fixed flex-wrap: wrap

--- a/main.css
+++ b/main.css
@@ -785,7 +785,7 @@ section {
 .fw-wrap > div {
     padding-top: 20px;
     padding-bottom: 20px;
-    flex-basis: 80px;
+    flex-basis: 79px;
     text-align: center;
 }
 
